@@ -1,7 +1,7 @@
 /*
  * ActionViewProcessor.java (weberknecht)
  *
- * Copyright 2010 Patrick Mairif.
+ * Copyright 2010-2012 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  * 
  * created: 2010-11.21
@@ -17,6 +17,7 @@ import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
 import de.highbyte_le.weberknecht.request.ContentProcessingException;
+import de.highbyte_le.weberknecht.request.ErrorHandler;
 
 /**
  * process action views
@@ -24,8 +25,16 @@ import de.highbyte_le.weberknecht.request.ContentProcessingException;
  * @author pmairif
  */
 public interface ActionViewProcessor {
+	/**
+	 * process action view
+	 */
 	public void processView(HttpServletRequest request, HttpServletResponse response, ExecutableAction action)
 			throws ServletException, IOException, ContentProcessingException, ActionExecutionException;
+
+	/**
+	 * process error handler view
+	 */
+	public void processView(HttpServletRequest request, HttpServletResponse response, ErrorHandler errorHandler);
 	
 	public void setServletContext(ServletContext servletContext);
 }
