@@ -16,6 +16,8 @@ next (1.0):
 	- WebAction.getModels() throws ContentProcessingException
 	- pre-/post-processor sets must be reffered explicitly by ids and can be assigned to areas or single classes
 	- syntax of weberknecht.xml changed
+	- error handlers
+	- ActionViewProcessors also process error handler views.
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
